# cppSikam

./: .gitignore  CMakeLists.txt  README.md  first.cpp
DS/: draft.c  q1.c  q2.c  q3.c  q4.c  q5  q5.c
Lab1/: q2.cpp  q3.cpp  q4.cpp  q5  q5.cpp
Lab2/: q1.cpp  q2.cpp  q3  q3.cpp  q4
Lab3/: q1.cpp  q2.cpp  q4.cpp
OOP/Assingment2/: q8  q8.cpp
OOP/Lab1/: q1  q1.cpp  q4
OOP/Lab2/: q2.cpp  q4.cpp
OOP/Lab3/: q3.cpp
OOP/krishom/: manipulators.cpp
krishom/: first.cpp
