cmake_minimum_required(VERSION 3.28)
project(collab)

set(CMAKE_CXX_STANDARD 14)

add_executable(collab
        krishom/first.cpp
        Lab1/q1.cpp
        Lab1/q2.cpp
        Lab1/q3.cpp
        Lab1/q4.cpp
        Lab1/q5.cpp
        first.cpp
        Lab3/q1.cpp
        Lab3/q2.cpp
        Lab3/q3.cpp
        Lab3/q4.cpp)
